...
      screenOptions={({ route }) => ({
        tabBarIcon: ({ focused, color, size }) => {
          let iconName;

          if (route.name === 'Home') {
            iconName = focused ? 'home' : 'home-outline';
          } else if (route.name === 'Assets') {
            iconName = focused ? 'wallet' : 'wallet-outline';
          } else if (route.name === 'History') {
            iconName = focused ? 'time' : 'time-outline';
          }

          return <Ionicons name={iconName} size={size} color={color} />;
...
        }}
      />
      <Tab.Screen 
        name="Assets" 
        component={SafeAssetsScreen}
        options={{
          tabBarTestID: 'assets-tab',
        }}
      />
      <Tab.Screen 
        name="History" 
        component={SafeHistoryScreen}
        options={{
          tabBarTestID: 'history-tab',
        }}
      />
    </Tab.Navigator>
  );
};

...
